--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,6 @@
 <resources>
-    <string name="app_name">ejercicio_bitsa-bitnami</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="app_name">Castle Game</string>
 
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="loading_text">The visitors are playing the game</string>
     <string name="retry_action">Retry</string>
     <string name="castle_status">Castle status</string>
